Pose: Select Linked does not work from menu #76071

Closed
opened 2020-04-24 21:55:34 +02:00 by Aaron Carlisle · 10 comments
Member

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.66

Blender Version
Broken: version: 2.90 (sub 0), branch: master, commit date: 2020-04-24 15:10, hash: be5c9d45bd
Worked: (newest version of Blender that worked as expected)

Short description of error
Select Linked does not work from menu

Exact steps for others to reproduce the error
Create armature, go to pose mode, select a bone, select linked from menu

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.66 **Blender Version** Broken: version: 2.90 (sub 0), branch: master, commit date: 2020-04-24 15:10, hash: `be5c9d45bd` Worked: (newest version of Blender that worked as expected) **Short description of error** Select Linked does not work from menu **Exact steps for others to reproduce the error** Create armature, go to pose mode, select a bone, select linked from menu
Author
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2020-04-26 12:49:31 +02:00
Member

Will check...

Will check...
Member

The operator in its current state is based on mouse position and doesnt make sense to be called from a menu.
(In fact it should be called 'select_linked_pick' internally and a separate 'select_linked' should be implemented similar to how "Select Linked" works for meshes, curves etc)

We had the same thing for particles recently:

So we should do the same thing here (in two steps):

  • Remove "Select Linked" from the pose select and context menu
  • Armature posemode: add mouse independent "Select Linked" operator

Will post Diffs for both shortly...

The operator in its current state is based on mouse position and doesnt make sense to be called from a menu. (In fact it should be called 'select_linked_pick' internally and a separate 'select_linked' should be implemented similar to how "Select Linked" works for meshes, curves etc) We had the same thing for particles recently: - dd9dfadaac - 5ca7c85e10 So we should do the same thing here (in two steps): - Remove "Select Linked" from the pose select and context menu - Armature posemode: add mouse independent "Select Linked" operator Will post Diffs for both shortly...

This issue was referenced by 536055e1ee

This issue was referenced by 536055e1ee0b238d11a774625b0639e05730cd53
Member

btw. this would also go in line with armature editmode, where we already have armature.select_linked armature.select_linked_pick

btw. this would also go in line with armature editmode, where we already have `armature.select_linked` `armature.select_linked_pick`

This issue was referenced by e07b245fe1

This issue was referenced by e07b245fe1f41cab13d772c3e26adc2521126324
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member

Note: this is closed now, but D7542: Armature posemode: add mouse independent "Select Linked" operator could/should still be committed...

Note: this is closed now, but [D7542: Armature posemode: add mouse independent "Select Linked" operator](https://archive.blender.org/developer/D7542) could/should still be committed...
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76071
No description provided.